# ch4_transport_example

./: .gitignore  .pylintrc  README.md  ch4_transport_example.html  ch4_transport_example.ipynb  pyproject.toml  requirements.txt
transport_model/: gas.py  iotools.py  model_variables.py  odefun_gas.py
