[tool.poetry]
name = "ch4_transport_example"
version = "0.1.0"
description = ""
authors = ["Altesmi <optikkasalo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.10.0"
scipy = "^1.8.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
xarray = "^2022.3.0"
matplotlib = "^3.5.1"
netCDF4 = "^1.5.8"
notebook = "^6.4.11"
seaborn = "^0.11.2"
ipywidgets = "^7.7.0"
ipympl = "^0.9.1"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
autopep8 = "^1.6.0"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
